# dbg-pls

./: .gitmodules  Cargo.toml  README.md
debug-derive/: Cargo.toml
debug-derive/src/: debug.rs  lib.rs  parse.rs  pat.rs  predicate.rs  to_tokens.rs
src/: colors.rs  debug_list.rs  debug_map.rs  debug_set.rs  debug_struct.rs  debug_tuple.rs  debug_tuple_struct.rs  impls.rs  lib.rs  pretty.rs
src/impls/: proc_macro2.rs  std.rs  syn_impls.rs
src/impls/std/: collections.rs  fnptr.rs  tuple.rs
src/impls/syn/: expr.rs  gen.rs  item.rs  mod.rs  pat.rs  stmt.rs  token.rs  ty.rs
src/impls/syn/expr/: binop.rs
src/impls/syn/snapshots/: dbg_pls__impls__syn__tests__expr_array.snap  dbg_pls__impls__syn__tests__item_macro.snap
src/polyfill/: mod.rs
src/pretty/please/: README.md  algorithm.rs  attr.rs  convenience.rs  data.rs  expr.rs  file.rs  generics.rs  item.rs  lifetime.rs  lit.rs  mac.rs  mod.rs  pat.rs  path.rs  stmt.rs  token.rs  ty.rs
src/snapshots/: dbg_pls__tests__debug_enum_generic__none.snap  dbg_pls__tests__debug_enum_generic__some.snap  dbg_pls__tests__debug_enum_generic__wtf.snap  dbg_pls__tests__debug_generic.snap  dbg_pls__tests__debug_map.snap  dbg_pls__tests__debug_nested_map.snap  dbg_pls__tests__debug_nested_set.snap  dbg_pls__tests__debug_nested_struct.snap  dbg_pls__tests__debug_recursive.snap  dbg_pls__tests__debug_recursive2.snap  dbg_pls__tests__debug_small_set.snap  dbg_pls__tests__debug_struct.snap  dbg_pls__tests__debug_struct_big.snap  dbg_pls__tests__ranges.snap
syn-codegen/: Cargo.toml
syn-codegen/src/: main.rs
tests/: derive.rs  syn.rs
tests/snapshots/: derive__debug_enum_generic__none.snap  derive__debug_enum_generic__some.snap  derive__debug_enum_generic__wtf.snap  derive__debug_generic.snap  derive__debug_map.snap  derive__debug_nested_map.snap  derive__debug_nested_set.snap  derive__debug_nested_struct.snap  derive__debug_recursive.snap  derive__debug_recursive2.snap  derive__debug_small_set.snap  derive__debug_struct.snap  derive__debug_struct_big.snap  derive__ranges.snap  derive__raw_idents.snap  syn__expr_array.snap  syn__item_macro.snap  syn__qself.snap
