[workspace]
members = ["debug-derive"]

[package]
name = "dbg-pls"
version = "0.1.1"
authors = ["Conrad Ludgate <conradludgate@gmail.com>"]
edition = "2018"
description = "Syntax aware pretty-printing debugging"
license = "MIT"
repository = "https://github.com/conradludgate/dbg-pls"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1", features = ["full"] }

# derive
dbg-pls-derive = { version = "0.1.1", path = "debug-derive", optional = true }

# pretty
prettyplease = { version = "0.1", optional = true }
textwrap = { version = "0.15", optional = true }

# colors
syntect = { version = "4.6.0", optional = true }
once_cell = "1"

[dev-dependencies]
dbg-pls = { path = ".", features = ["colors"] }

[features]
default = ["derive", "pretty"]
derive = ["dbg-pls-derive"]
pretty = ["prettyplease", "textwrap"]
colors = ["pretty", "syntect"]
