[workspace]
members = ["debug-derive"]

[package]
name = "dbg-pls"
version = "0.2.2"
authors = ["Conrad Ludgate <conradludgate@gmail.com>"]
edition = "2018"
description = "Syntax aware pretty-printing debugging"
license = "MIT"
repository = "https://github.com/conradludgate/dbg-pls"
readme = "README.md"

include = [
    "src",
    "README.md",
    "assets/syntaxes/Rust/Rust.sublime-syntax",
    "assets/themes/sublime-monokai-extended/Monokai Extended.tmTheme",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1", features = ["full"] }
proc-macro2 = "1"
quote = "1"
itoa = "1"
ryu = "1"

# derive
dbg-pls-derive = { version = "0.2.1", path = "debug-derive", optional = true }

# pretty
prettyplease = { version = "0.1", optional = true }
textwrap = { version = "0.15", optional = true }

# colors
syntect = { version = "4.6.0", optional = true }
once_cell = "1"

[dev-dependencies]
dbg-pls = { path = ".", features = ["derive", "pretty", "colors"] }

[features]
default = []
derive = ["dbg-pls-derive"]
pretty = ["prettyplease", "textwrap"]
colors = ["pretty", "syntect"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
