[workspace]
members = ["debug-derive", "syn-codegen"]

[package]
name = "dbg-pls"
version = "0.4.3"
authors = ["Conrad Ludgate <conradludgate@gmail.com>"]
edition = "2021"
description = "Syntax aware pretty-printing debugging"
license = "MIT"
repository = "https://github.com/conradludgate/dbg-pls"
readme = "README.md"

include = [
    "src",
    "README.md",
    "assets/syntaxes/Rust/Rust.sublime-syntax",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "2", features = ["full"] }
proc-macro2 = "1"
quote = "1"
itoa = "1"
ryu = "1"

# derive
dbg-pls-derive = { version = "0.4.0", path = "debug-derive", optional = true }

# pretty

# colors
syntect = { version = "5.0.0", optional = true }
stylish = { version = "0.1.0", default-features = false, features = ["ansi"], optional = true }

[dev-dependencies]
dbg-pls = { path = ".", features = ["derive", "pretty", "colors"] }
syn = { version = "2", features = ["full", "extra-traits"] }
insta = "1.14.0"

[features]
default = []
derive = ["dbg-pls-derive"]
pretty = []
colors = ["pretty", "syntect", "stylish"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
