[package]
name = "dbg-pls-derive"
version = "0.2.1"
authors = ["Conrad Ludgate <conradludgate@gmail.com>"]
edition = "2018"
description = "derive(Debug)"
license = "MIT"
repository = "https://github.com/conradludgate/dbg-pls"
readme = "../README.md"

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
syn = "1.0"
proc-macro2 = "1.0"
