[package]
name = "dbg-pls-internal-codegen"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn-codegen = "0.3"
syn = { version = "2", features = ["full"] }
proc-macro2 = "1"
quote = "1"
prettyplease = { version = "0.2" }
serde_json = "1"
